Fix: adjust overflow properties for modal to enhance content visibility

--- a/style.css
+++ b/style.css
@@ -3413,10 +3413,10 @@ table th i {
 	width: 100%;
 	max-height: 90vh;
 	overflow-y: auto;
+	overflow-x: hidden;
 	background: #fff;
 	border-radius: 12px;
 	box-shadow: var(--box-shadow);
-	overflow: hidden;
 }
 
 .app-modal--item {
